# tapioca

./: .clang-tidy  CMakeLists.txt  framework.json
include/tapioca/: ansi_emitter.h  canvas.h  cell.h  color.h  console.h  exports.h  image.h  input.h  layout_types.h  pal.h  raw_input.h  style.h  style_table.h  terminal.h  unicode_width.h
src/: console.cpp  image.cpp  pal.cpp  raw_input.cpp  raw_input_emscripten.cpp  style.cpp  tapioca.cpp  terminal.cpp  terminal_emscripten.cpp  unicode_width.cpp
tests/: CMakeLists.txt  ansi_test.cpp  canvas_test.cpp  color_downgrade_test.cpp  color_test.cpp  console_pal_test.cpp  image_test.cpp  layout_types_test.cpp  style_test.cpp  unicode_width_test.cpp
